[package]
name = "agpui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gpui = "0.2.2"
gpui-component = { version = "0.4.2", features = ["webview"] }
# wry = { version = "0.53.3", package = "lb-wry" }
gpui-component-assets = "0.4.2"
fake = "4.4.0"
rust-embed = "8.9.0"
wry = "0.53.5"
